@@ -184,18 +184,26 @@
 
 ;;;; Documentation
 
+(defun map-list (function list)
+  "Map over proper and not proper lists."
+  (loop for (car . cdr) on list
+        collect (funcall function car) into result
+        when (null cdr) return result
+        when (atom cdr) return (nconc result (funcall function cdr))))
+
 (defun replace-strings-with-symbols (tree)
-  (mapcar (lambda (x)
-            (typecase x
-              (list
-               (replace-strings-with-symbols x))
-              (symbol
-               x)
-              (string
-               (intern x))
-              (t
-               (intern (write-to-string x)))))
-          tree))
+  (map-list
+   (lambda (x)
+     (typecase x
+       (list
+        (replace-strings-with-symbols x))
+       (symbol
+        x)
+       (string
+        (intern x))
+       (t
+        (intern (write-to-string x)))))
+   tree))
                
 (defimplementation arglist (symbol-or-function)
   (let ((arglist (lw:function-lambda-list symbol-or-function)))
