@@ -1,3 +1,8 @@
+2009-09-28  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-lispworks.lisp (replace-strings-with-symbols): Didn't work on
+	non-proper lists. Reported by Madhu.
+
 2009-09-27  Tobias C. Rittweiler <tcr@freebits.de>
 
 	* swank-sbcl.lisp (call-with-debugger-hook): Correctly deal with
